added story page and route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-    
+        <ul>
+            <li><a href="/story">Story</a></li>
+            <li><a href="/characters">Characters</a></li>
+            <li><a href="/activities">Activities</a></li>
+            <li><a href="/lore">Lore</a></li>
+            <li><a href="/weapons">Weapons</a></li>
+            <li><a href="/armor">Armor</a></li>
+            <li><a href="/equipment">Equipment</a></li>
+            <li><a href="/login">Login to your Bungie Account</a></li>
+        </ul>
     </body>
 </html>
