--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Destiny 2 Stats</title>
+        <title>World of Destiny 2</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
